style.css
/* ... */
@media screen and (max-width:420px){
    .header__logo_text{
        line-height: 34px;
        font-size: 30px;
    }
    .header_santa{
        width: 70px;
        height: 66px;
    }
    .popup{
        position:aboslute;
        top: 0px;
        height: 100vh;
        border-radius: 0px;
    }
}

@media screen and (max-width:390px){
    .header__logo_text{
        line-height: 32px;
        font-size: 28px;
    }
    .header_santa{
        width: 65px;
        height: 62px;
    }
}


@media screen and (max-width:380px){
    .header__logo_text{
        line-height: 30px;
        font-size: 26px;
    }
    .header_santa{
        width: 60px;
        height: 56px;
    }
    .header__fill{
        margin-right: 10px;
    }
    .footer_block_row{
        flex-direction: column;
    }
    .footer__item_master{
        margin: 0 0px 10px 0;
    }
    .footer__item_visa{
        margin:0 0px 10px 0 ;
    }
    .footer__item_privat{
        width: 45px;
        height: 45px;
    }
    .footer__container{
        min-height: 35vh;
    }
}

@media screen and (max-width:360px){
    .header__logo_text{
        line-height: 28px;
        font-size: 24px;
    }
    .header_santa{
        width: 56px;
        height: 54px;
    }
}


@media screen and (max-width:340px){
    .header__logo_text{
        line-height: 26px;
        font-size: 22px;
    }
    .header_santa{
        width: 52px;
        height: 50px;
    }
}




@media screen and (max-width:320px){
    .popup__h1{
        font-size: 22px;
    }
    .popup__card_right{
        display: flex;
        flex-direction: column-reverse;
    }
    .popup__card_add{
        width: 35px;
        height: 35px;
        font-size: 24px;
    }
    .popup__card_text{
        font-size: 16px;
    }
    .header__nav{
        display: none;
    }
    .header__a:nth-child(4){
        display: none;
    }
    .header__fill:nth-child(1){
        display: none;
    }
    .header__fill:nth-child(4){
        display: none;
    }
    .header_santa{
        width: 50px;
        height: 47px;
    }
    .header__logo_text{
        font-size: 22px;
        line-height: 24px;
    }
    .header__select{
        display: none;
    }
    .header__fill{
        width: 40px;
        height: 40px;
        margin-right: 5px;
    }
    .header__favourite, .header__search{
        width: 20px;
        height: 17px;
    }




    .main__fill_text{
        display: none;
    }
    .main__fill_photo{
        width: 320px;
        height: 320px;
        border-radius: 20px;
    }
    .main__banner{
        width: 320px;
        height: 320px;
        background-size: cover;
    }
    .swiper{
        height: 380px;
        max-width: 98%;
    }
    .swiper-slide{
        height: 320px;
    }
    .main__banner_text{
        display: none;
    }
    .main__banner_bottom{
        display: none;
    }
    .main__filtr_item{
        display: none;
    }
    .main__filtr_fill{
        width: 44px;
        height: 44px;
        background-color: #fff;
        border-radius: 12px;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .main__filter_item_filtr{
        display: flex;
    }
    .menu-btn{
        display: flex;
    }
    .main__catalog_item{
        width: 320px;
    }
    .main__about_subtitle{
        font-size: 16px;
    }
    .main__about_history{
        width: 100%;
    }
    .footer__container{
        flex-direction: column;
        min-height: 30vh;
        align-items: center;
    }
    .footer__logo_fill{
        justify-content: center;
        margin-bottom: 20px;
    }
    .footer__text_rights{
        display: none;
    }
    .footer__text_title{
        font-size: 12px;
    }
    .footer__blocks{
        width: 100%;
    }
    .footer_block:nth-child(4){
        display: flex;
        flex-direction:row;
        align-items: center;
        justify-content: space-between;
        width: 75%;
    }
    .footer__item_master{
        margin: 0;
    }
    .footer__item_visa{
        margin: 0;
    }
    .footer__item_privat{
        height: 47px;
        width: 47px;
    }
    .footer__blocks2{
        width: 100%;
    }
    .footer__item_master{
        margin: 0 0px 10px 0;
    }
    .footer__item_visa{
        margin:0 0px 10px 0 ;
    }
}

